== Thu Dec 17 06:35:05 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Fixed parsing error 'Subject: =?ISO-8859-1?Q?Re=3A_ol=E1?=' (has a new line embedded)

== Thu Dec 17 02:14:23 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Version 1.3.4
* Vendor'd treetop

== Thu Dec 17 01:32:00 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Version 1.3.3
* Removed dependency on treetop, don't need it at runtime

== Wed Dec 16 23:48:46 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Version 1.3.2
* Resolved Ruby 1.9.1-head not working because File.basename only accepts US-ASCII or 8Bit

== Sun Dec 13 01:06:17 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Version 1.3.1
* Resolved Issue #18 - Wrong instance variable name
* Resolved Issue #15 - Duplicate block call

== Thu Dec 10 21:25:37 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Resolved Issue #13 - replacing From field results in from field becoming optional field.

== Thu  3 Dec 2009 00:52:12 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Added POP upgrades from Nicolas Fouché
* Added patch to handle multiple from lines in email from Luke Grimstrup

== Mon Nov 23 23:34:22 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Resolved Issue #12 - Wrong comment in smtp.rb

== Mon Nov 23 22:35:50 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Changed the way attachments are added so that it does not break depending on the order
  of the Hash passed in.
* Version bump to 1.3.0 - Now works with Edge ActionMailer, MRI 1.8.6, 1.8.7, 1.9.1, all tests passing

== Sun Nov 22 12:19:44 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Added check on add_part to make sure if there is already a body, and if so, make a text_part of the body
* Fixing up attachment adding and making sure multipart emails always have boundaries
* Change Message#attachments to now recursively return all attachments in the email in an ordered flattened array